@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>What's New in Abator</h1>
-<h2>Version 1.0.1</h2>
+<h2>Version 1.1.0</h2>
 <h3>Miscellaneous Changes</h3>
 <ul>
   <li>Fixed a bug that caused the "trimStrings" property to fail</li>
@@ -49,6 +49,7 @@
       </ul>
     See the <a href="configreference/table.html">&lt;table&gt;</a>
     reference page for more information.</li>
+  <li>Fixed bug - incorrect datatype mapping for JDBC BIT datatype</li>
 </ul>
 
 <h2>Version 1.0.0</h2>
